@@ -25,12 +25,12 @@
 
 class markasjunk2_dir_learn
 {
-    public function spam($uids, $mbox)
+    public function spam($uids, $src_mbox, $dst_mbox)
     {
         $this->_do_messagemove($uids, true);
     }
 
-    public function ham($uids, $mbox)
+    public function ham($uids, $src_mbox, $dst_mbox)
     {
         $this->_do_messagemove($uids, false);
     }
